# paxos

./: README.md
basic-paxos/: Cargo.toml
basic-paxos-lib/: Cargo.toml  LICENSE  README.md
basic-paxos-lib-tests/: Cargo.toml
basic-paxos-lib-tests/src/: lib.rs
basic-paxos-lib/src/: acceptors.rs  lib.rs  proposers.rs
basic-paxos-server/: Cargo.toml
basic-paxos-server/src/: README.md  gui.rs  main.rs
basic-paxos/src/: acceptors.rs  lib.rs  proposers.rs
eframe_testing/: Cargo.toml
eframe_testing/src/: main.rs
paxos-controllers/: Cargo.toml  README.md
paxos-controllers/src/: lib.rs  local_controller.rs
paxos_replicated_log_gui/: Cargo.toml  README.md
paxos_replicated_log_gui/src/: Frames.rs  back_end.rs  frames.rs  gui.rs  main.rs
