[package]
name = "basic-paxos-lib-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paxos-controllers = {version="0.1.0", path = "../paxos-controllers"}
tokio = { version = "1.21.2", features = ["full"] }
