[package]
name = "basic-paxos-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
tokio = { version = "1.21.0", features = ["rt", "macros"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
