[package]
name = "basic-paxos-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
axum = {version="0.5.15", features=["json"]}
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21", features = ["full"] }
basic-paxos-lib = {version="0.1.0", path = "../basic-paxos-lib"}
hyper = { version = "0.14.20", features = ["client"] }
serde_json = "1.0.85"
color-eyre = "0.6.2"
axum-macros = "0.2.3"
anyhow = "1.0.65"
clap = { version = "4.0.11", features = ["cargo"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
egui = "0.19.0"
eframe = "0.19.0"
flume = "0.10.14"
futures = "0.3.24"
