[package]
name = "paxos-controllers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
basic-paxos-lib = {version="0.1.0", path = "../basic-paxos-lib"}
tokio = { version = "1.21.2", features = ["sync","rt"] }
